May be fix of scrolling on safari.

--- a/book/book.view.css
+++ b/book/book.view.css
@@ -14,6 +14,7 @@
 [mol_book] > *:not([mol_book_page_visible]) {
 	position: absolute;
 	opacity: 0;
+	pointer-events: none;
 	transform: translate3d( -50% , 0 , 0 ) scaleX( 0 );
 }
 
